# arirang

./: .gitignore  AGENTS.md  HOOK_CODE_REVIEW_TODO.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/aidl/asia/nana7mi/arirang/hook/: IArirangService.aidl  IClipboardDecisionCallback.aidl  IConfigSnapshotCallback.aidl  IHookNotify.aidl
app/src/main/assets/: xposed_init
app/src/main/java/asia/nana7mi/arirang/: ArirangApp.kt
app/src/main/java/asia/nana7mi/arirang/data/config/: ConfigBackupManager.kt  ConfigIds.kt  ConfigRegistry.kt  ManagedConfig.kt
app/src/main/java/asia/nana7mi/arirang/data/datastore/: AppPreferences.kt  (+12 more)
app/src/main/java/asia/nana7mi/arirang/hook/: ArirangClient.kt  BaseHookModule.kt  FuckBluetooth.kt  FuckClipboard.kt  FuckGms.kt  FuckLocation.kt  FuckPackageList.kt  FuckProcess.kt  FuckSIM.kt  FuckSettingsProvider.kt  FuckSim.kt  FuckWifi.kt  HookConfig.kt  HookConfigFile.kt  HookLog.kt  HookManager.kt  HookModule.kt  HookNotifyClient.kt  RealtimeHookConfig.kt  SystemServerHook.kt  XposedActivation.kt
app/src/main/java/asia/nana7mi/arirang/model/: AppInfo.kt  ClipboardDecision.kt  DevicePresetCatalog.kt  PackageCustomListItem.kt  PackageVisibilityAppInfo.kt  SimInfo.kt  SimPresetCatalog.kt
app/src/main/java/asia/nana7mi/arirang/receiver/: ClipboardRequestReceiver.kt
app/src/main/java/asia/nana7mi/arirang/service/: ArirangService.kt  CallerValidator.kt  ClipboardController.kt  ConfigProvider.kt  HookNotifyService.kt
app/src/main/java/asia/nana7mi/arirang/ui/: BaseActivity.kt  ClipboardConfigActivity.kt  ConfirmDialogActivity.kt  InitActivity.kt  LanguageSettingsActivity.kt  MainActivity.kt  SimConfigActivity.kt  SplashActivity.kt  TestActivity.java  TestActivity.kt
app/src/main/java/asia/nana7mi/arirang/util/: LocaleHelper.kt  ZipUtils.kt
app/src/main/java/asia/nana7mi/arirang/view/: FeatureItemView.kt
app/src/main/res/layout/: activity_clipboard_setting.xml  activity_device_info_config.xml  activity_language_settings.xml  activity_location_config.xml  activity_package_custom_list.xml  activity_package_list_config.xml  activity_package_template_manager.xml  activity_self_check.xml  activity_sim_config.xml  activity_sim_scope.xml  activity_test.xml  fragment_home.xml  fragment_settings.xml  fragment_user.xml  item_package_custom_list_app.xml  item_sim_info_slot.xml  main.xml
app/src/main/res/menu/: bottom_nav_menu.xml  menu_clipboard_config.xml  menu_package_custom_list.xml  menu_package_template_manager.xml  menu_package_visibility_config.xml  menu_self_check.xml
app/src/main/res/values/: arrays.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: arrays.xml  strings.xml
app/src/main/res/values-ja/: arrays.xml  strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: sim_presets.xml
app/src/test/java/asia/nana7mi/arirang/util/: ZipUtilsTest.kt
arirang-selfcheck/: build.gradle.kts  proguard-rules.pro
arirang-selfcheck/src/main/res/drawable/: ic_launcher_foreground.xml  ic_status_enabled.xml  ic_status_leak.xml
arirang-selfcheck/src/main/res/layout/: activity_self_check.xml
arirang-selfcheck/src/main/res/values/: dimens.xml  strings.xml
arirang-selfcheck/src/main/res/values-ja/: strings.xml
arirang-selfcheck/src/main/res/values-zh-rCN/: strings.xml
arirang-submodule/: CMakeLists.txt  build.gradle.kts  package.sh
arirang-submodule/doc/: drm_hook_research.md
arirang-submodule/module/: module.prop  post-fs-data.sh  sepolicy.rule  service.sh
arirang-submodule/module/lib/: common.sh  resetprop.sh  staging.sh  vendor_bind.sh  widevine.sh
arirang-submodule/scripts/: install_module.sh
arirang-submodule/src/main/cpp/: arirang_build_config.hpp.in  arirang_constants.hpp  arirang_drm_hook.cpp  arirang_zygisk.cpp  build_spoofer.cpp  build_spoofer.hpp  id_spoofer.cpp  id_spoofer.hpp  inline_hook.cpp  io_utils.hpp  logging.cpp  logging.hpp  submodule_config.cpp  submodule_config.hpp  system_property_spoofer.cpp  zygisk.hpp
arirang-submodule/src/main/cpp/core/: arirang_zygisk.cpp  runtime_config.cpp  runtime_config.hpp  submodule_config.cpp  submodule_config.hpp
arirang-submodule/src/main/cpp/drm/: arirang_drm_hook.cpp  arirang_injector.cpp  drm_hook_entry.hpp  drm_inline_hook.cpp  drm_inline_hook.hpp  drm_vtable_hook.cpp  drm_vtable_hook.hpp
arirang-submodule/src/main/cpp/hook/: inline_hook.cpp  inline_hook.hpp  path_matching.hpp  symbol_resolver.cpp  symbol_resolver.hpp  vtable_hook.cpp  vtable_hook.hpp
arirang-submodule/src/main/cpp/spoofer/: sensor_aosp_bridge.cpp  sensor_precision.hpp  sensor_rules.cpp  sensor_rules.hpp  sensor_shared_state.hpp  sensor_spoofer.cpp  sensor_spoofer.hpp  sensor_vtable_patch.hpp  system_property_spoofer.cpp  system_property_spoofer.hpp
arirang-submodule/src/main/cpp/utils/: io_utils.cpp  jni_utils.cpp  jni_utils.hpp  logging.cpp
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
selfcheck/src/main/: AndroidManifest.xml
selfcheck/src/main/res/layout/: item_self_check_section.xml
selfcheck/src/main/res/values/: strings.xml  themes.xml
selfcheck/src/main/res/values-ja/: strings.xml
selfcheck/src/main/res/values-zh-rCN/: strings.xml
submodule/: .gitignore  CMakeLists.txt  build.gradle.kts
submodule/doc/: drm_hook_deep_dive.md  hook_file_design.md
submodule/module/: module.prop  sepolicy.rule  service.sh
submodule/module/lib/: staging.sh  vendor_bind.sh
submodule/src/main/cpp/core/: arirang_zygisk.cpp  submodule_config.cpp
submodule/src/main/cpp/drm/: arirang_injector.cpp  drm_hook_entry.hpp  drm_symbol_classifier.hpp
submodule/src/main/cpp/hook/: symbol_resolver.cpp
submodule/src/main/cpp/spoofer/: build_spoofer.cpp  sensor_aosp_bridge.hpp  sensor_aosp_types.hpp  sensor_precision.cpp  sensor_vtable_patch.cpp  system_property_spoofer.cpp
submodule/src/main/cpp/utils/: io_utils.cpp  io_utils.hpp  jni_utils.hpp  logging.cpp  logging.hpp
(+186 files in other folders)
